# sabermath

./: .gitignore  README.md  environment.yml  pyproject.toml
build_benchmark/: .gitignore  README.md  environment.yml  final_transform.py  requirements.txt
build_benchmark/annotate/: environment.yml
build_benchmark/annotate/ideas/: README.md  extract_ideas.py  (+2 more)
build_benchmark/assets/: tree.json
build_benchmark/fastbma/: .gitignore  pyproject.toml
build_benchmark/fastbma/benchmarks/: pairwise.py
build_benchmark/fastbma/src/fastbma/: __init__.py  bma.c  bma.h  compute.c  compute.h  module.c  similarity_matrix.c  similarity_matrix.h  wrapper.py
build_benchmark/generate_scores/: README.md  bradley_terry.py  bradley_terry_run.py  config.yaml  environment.yml  swiss_tour_run.py
build_benchmark/select/: final_sampler.py  get_percentile_thresholds.py  select_targets_and_candidates.py  similarities.py  utils.py
experiments/: README.md
experiments/additional_experiments/: README.md  avg_inversions.py  config.yaml  environment.yml  plot_inversions.py  signal_effect.py
experiments/benchmark_analysis/: README.md  plot_candidates.py  plot_databank.py  plot_main_dataset.py
experiments/confidence_intervals/: .gitignore  README.md  confidence.py  json_to_tex.py
experiments/math-vs-word/: README.md  calc_sims.py  config.yaml  embed.py  environment.yml  fix_latex.py  load_models.py  plot_hist.py  sim_approach0.py  sim_embeddings.py  sim_helpers.py  sim_jaccard.py  sim_tfidf.py  stop_words.py  strip_words_and_math.py
experiments/mteb_comparison/: README.md  mteb_rank_correlation.py
scripts/: json_to_tex.py  models.txt  run_model.py  run_models.sh
src/sabermath/: __init__.py  benchmark.py  data.py  metrics.py  schemas.py
(+35 files in other folders)
