[build-system]
requires = ["setuptools>=74.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastbma"
description = "Fast Best-Match Average (BMA) implementation in C"
dynamic = ["version"]
requires-python = ">=3.10"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "fastbma.__version__.__version__" }

# ---- C EXTENSION DEFINITION ----
[[tool.setuptools.ext-modules]]
name = "fastbma._c_bma"
sources = [
  "src/fastbma/bma.c",
  "src/fastbma/compute.c",
  "src/fastbma/module.c",
  "src/fastbma/similarity_matrix.c"
]
